Make "Open in new Window" and "Open in new Tab" set referrer correctly. Bug 48902, r=doron, sr=hyatt